crafty.d.ts updated

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   ],
   "dependencies": {
     "crafty": "^0.7.0",
-    "socket.io-client": "^1.4.5"
+    "socket.io-client": "^1.4.5",
+    "jquery": "^2.2.1",
+    "bootstrap": "^3.3.6"
   }
 }
