--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
+    "node-uuid": "^1.4.7",
     "serve-favicon": "~2.3.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
