--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "crafty": "^0.7.0",
     "socket.io-client": "^1.4.5",
     "jquery": "^2.2.1",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "sweetalert": "^1.1.3"
   }
 }
