--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
     "node-uuid": "^1.4.7",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {}
 }
